fix: fixed contrast in codeblock
affects: @fremtind/portal

--- a/portal/src/components/CodeBlock/CodeBlock.scss
+++ b/portal/src/components/CodeBlock/CodeBlock.scss
@@ -3,7 +3,7 @@
 
 .jkl-portal-code-block {
     position: relative;
-    background-color: $sand;
+    background-color: $hvit;
     border-radius: rem(2px);
     width: 100%;
     padding: $component-spacing--medium;
